--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="monto_numero">0.00</string>
     <string name="titulo">TITULO</string>
     <string name="contentDescription">-</string>
+    <string name="_1">1</string>
 </resources>
