Se agrego StateFlow en RegistrarProductoActivity, actualizacion del gradle a kts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="titulo">TITULO</string>
     <string name="contentDescription">-</string>
     <string name="_1">1</string>
+    <string name="subtitulo">Subtitulo</string>
 </resources>
